--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,7 +31,7 @@
       >
         <h2>Add exercises</h2>
         <p><code>POST /api/users/:_id/exercises</code></p>
-        <input id="uid" type="text" name=":_id" placeholder=":_id" />
+        <input id="uid" type="text" name=":_id" placeholder="user :_id" />
         <input
           id="desc"
           type="text"
@@ -51,6 +51,31 @@
           placeholder="date (yyyy-mm-dd)"
         />
         <input type="submit" value="Submit" />
+      </form>
+
+      <form action="/api/v1/users/:_id/logs" id="logs-form" method="get">
+        <h2>Log exercises</h2>
+        <p><code>GET /api/users/:_id/logs?[from][&amp;to][&amp;limit]</code></p>
+        <input id="logs__uid" type="text" name=":_id" placeholder="user :_id" />
+        <input
+          id="logs__from"
+          type="text"
+          name="logs__fromDate"
+          placeholder="from-date (yyyy-mm-dd)"
+        />
+        <input
+          id="logs__to"
+          type="text"
+          name="logs__toDate"
+          placeholder="to-date (yyyy-mm-dd)"
+        />
+        <input
+          id="logs__limit"
+          type="text"
+          name="logs__limit"
+          placeholder="limit (number)"
+        />
+        <input type="submit" value="Get Logs" />
       </form>
       <p>
         <strong>GET user's exercise log: </strong>
@@ -98,6 +123,31 @@
           .catch((error) => {
             console.error("Error:", error);
           });
+      });
+
+      const logsForm = document.getElementById("logs-form");
+
+      logsForm.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const userId = document.getElementById("logs__uid").value;
+        const fromDate = document.getElementById("logs__from").value;
+        const toDate = document.getElementById("logs__to").value;
+        const limit = document.getElementById("logs__limit").value;
+
+        const params = new URLSearchParams();
+        if (fromDate) params.append("from", fromDate);
+        if (toDate) params.append("to", toDate);
+        if (limit) params.append("limit", limit);
+
+        const url = `/api/v1/users/${userId}/logs?${params.toString()}`;
+        try {
+          const response = await fetch(url);
+          const logs = await response.json();
+          console.log("User logs:", logs);
+        } catch (error) {
+          console.error("Error fetching logs:", error);
+        }
       });
 
       document.addEventListener("DOMContentLoaded", async () => {
